--- a/app/views/profile.scala.html
+++ b/app/views/profile.scala.html
@@ -12,8 +12,15 @@
 
     <div ng-controller="ProfileController as ctl">
       <h3>Profile</h3>
-
-
+      <div ng-if="!ctl.loggedIn">
+        <p>Please log in.</p>
+      </div>
+      <div ng-if="ctl.loggedIn">
+        <p>You are logged in as: {{ ctl.username }} </p>
+      </div>
+    </div>
+    <div ng-controller="LoginController as ctl">
+      <a ng-click="ctl.logout()" href="#">Logout</a>
     </div>
 
 
