--- a/public/app/components/authentication/login/login.html
+++ b/public/app/components/authentication/login/login.html
@@ -13,7 +13,7 @@
     <div ng-controller="LoginController as ctl">
       <h3>Login</h3>
       <form>
-        Email: <br/> <input ng-model="ctl.formEmail" type="text" name="email"> <br />
+        Email: <br/> <input ng-model="ctl.formUsername" type="text" name="username"> <br />
         Password: <br/> <input ng-model="ctl.formPassword" type="password" name="password"><br />
         <input ng-click="ctl.submitForm()" type="submit" value="Submit"> {{ ctl.loginReturnValue }}
       </form>
